<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/principal"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Table Heading -->



        <!-- Table Data -->

        <TableRow>

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Periodo Academico:"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="2022-A"
                android:textSize="12sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="Escuela Profesional"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/escuela"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/codigo"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/escuela"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/nombre"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/nombre_A"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/semestre"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/semestre_A"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/text11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/titulos"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/duracion"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/duracion_A"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonColor"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:text="Cambiar Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/buttonSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="220dp"
        android:text="Cambiar Tamaño"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"

        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName5"
        app:layout_constraintTop_toBottomOf="@+id/buttonColor"
        app:layout_constraintVertical_bias="0.956" />

    <Button
        android:id="@+id/buttonFonts"
        android:layout_width="173dp"
        android:layout_height="49dp"
        android:layout_marginBottom="80dp"
        android:text="Cambiar Estilo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toEndOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/buttonSize"
        app:layout_constraintVertical_bias="0.681" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/spinner_color"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintEnd_toStartOf="@+id/buttonColor"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginBottom="224dp"
        android:ems="10"
        android:inputType="number"
        android:hint="Pon Tamaño"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/spinner_fuent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName5"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>